--- a/RestWithASPNETUdemy/RestWithASPNETUdemy/appsettings.json
+++ b/RestWithASPNETUdemy/RestWithASPNETUdemy/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "MySqlConnection": {
+       "MySqlConnectionString": "Server=localhost;DataBase=rest_with_asp_net_udemy;Uid=root;Pwd="
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
