--- a/RestWithASPNETUdemy/RestWithASPNETUdemy/appsettings.json
+++ b/RestWithASPNETUdemy/RestWithASPNETUdemy/appsettings.json
@@ -1,6 +1,6 @@
 {
   "MySqlConnection": {
-       "MySqlConnectionString": "Server=localhost;DataBase=rest_with_asp_net_udemy;Uid=root;Pwd="
+       "MySqlConnectionString": "Server=localhost;DataBase=rest_with_asp_net_udemy;Uid=root;Pwd=root"
   },
   "Logging": {
     "LogLevel": {
